--- a/.env
+++ b/.env
@@ -4,13 +4,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-#DB_CONNECTION=mysql
-DB_CONNECTION=sqlite
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=homestead
-#DB_USERNAME=homestead
-#DB_PASSWORD=secret
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=tinkeringSocialite_cristianfonolla
+DB_USERNAME=tinkeringSocial_cristianfonolla
+DB_PASSWORD=aslotuyo23
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -34,16 +33,16 @@ PUSHER_APP_SECRET=
 
 GITHUB_OAUTH_APP_ID=87ce31bf7c665da7beeb
 GITHUB_OAUTH_APP_SECRET=f98cb9c6264485e9c2179bffc24027abb8caddfb
-GITHUB_OAUTH_APP_REDIRECT_URL=http://localhost:8080/auth/github/callback
+GITHUB_OAUTH_APP_REDIRECT_URL=http://tinkeringsocialite.cristianfonolla.2dam.acacha.org:8080/auth/github/callback
 
 FACEBOOK_OAUTH_APP_ID=659449304240584
 FACEBOOK_OAUTH_APP_SECRET=b30ec40ce9b11a244f0b253655507af8
-FACEBOOK_OAUTH_APP_REDIRECT_URL=http://localhost:8080/auth/facebook/callback
+FACEBOOK_OAUTH_APP_REDIRECT_URL=http://tinkeringsocialite.cristianfonolla.2dam.acacha.org:8080/auth/facebook/callback
 
 GOOGLE_OAUTH_APP_ID=448021590950-6kddj32pmn9krqot94eqt3nfe95tlacv.apps.googleusercontent.com
 GOOGLE_OAUTH_APP_SECRET=eaFSTzWaioC0ivKnqe_tvXb5
-GOOGLE_OAUTH_APP_REDIRECT_URL=http://localhost:8080/auth/google/callback
+GOOGLE_OAUTH_APP_REDIRECT_URL=http://tinkeringsocialite.cristianfonolla.2dam.acacha.org:8080/auth/google/callback
 
 TWITTER_OAUTH_APP_ID=qH0uRu982ms1dHgjaPubHoojJ
 TWITTER_OAUTH_APP_SECRET=jkRW1KmLBDNv2TpgIuXifljM1gzKSsWuf06Jyc8qbV4mb7Wu7y
-TWITTER_OAUTH_APP_REDIRECT_URL=http://localhost:8080/auth/twitter/callback
+TWITTER_OAUTH_APP_REDIRECT_URL=http://tinkeringsocialite.cristianfonolla.2dam.acacha.org:8080/auth/twitter/callback
